调整skills
